--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@
           <li>✓ Ideal para verificações rápidas e pontuais</li>
           <li>✓ Pagamento mensal simplificado</li>
         </ul>
-        <a href="https://t.me/OVERBANSUPORTE_BOT" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
+        <a href="https://t.me/overstore71_bot" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
       </div>
       <div class="plano popular">
         <div class="ribbon">Mais Popular</div>
@@ -851,7 +851,7 @@
           <li>✓ Atualizações de dados semanais garantidas</li>
           <li>✓ Garante tomadas de decisão mais seguras e informadas</li>
         </ul>
-        <a href="https://t.me/OVERBANSUPORTE_BOT" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
+        <a href="https://t.me/overstore71_bot" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
       </div>
       <div class="plano">
         <h3>PREMIUM + BRINDE</h3>
@@ -862,7 +862,7 @@
           <li>✓ Prioridade máxima em novas ferramentas e funcionalidades</li>
           <li>✓ Maximize seus resultados com inteligência de dados completa</li>
         </ul>
-        <a href="https://t.me/OVERBANSUPORTE_BOT" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
+        <a href="https://t.me/overstore71_bot" target="_blank" rel="noopener noreferrer">Comprar Agora</a>
       </div>
     </div>
   </section>
